#1151: Converted GetMimeTypeUsageTypes UC to extend BasePaginatedMultipleEntitiesCommand